--- a/about.html
+++ b/about.html
@@ -10,11 +10,43 @@
   <body bgcolor="black">
     <div id="main">
       <div id="card" class="card">
-        <h1>Anand Sudeep</h1>
-        <p>
-          <b id="hay">Hay</b><br />my self Anand Sudeep from India,studing
-          B.Tech in Providence College of Engineering
-        </p>
+        <div class="textContent">
+          <h1>Anand Sudeep</h1>
+          <p>
+            <b id="hay">Hay</b><br />my self Anand Sudeep from India,studing
+            B.Tech in Providence College of Engineering ,<br />I had many
+            opportunity to work in a vast spectrum of web technologies<br />
+            What let me gather a significant amount of various experience
+            <br />
+            <br />
+            <br />
+            if(caffeine.LEVEL == 0)<br />
+            &ThickSpace; Sleep.start();<br />
+            else<br />&ThickSpace; work.continue();
+          </p>
+        </div>
+        <div class="effect">
+          <img
+            width="400px"
+            src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp2742531.png&f=1&nofb=1&ipt=d2dce13c0e80029cf10a2de1ac7f4f0aa57ca96c977b3410f4cf2485dfdeefd8&ipo=images"
+            alt="no"
+          />
+        </div>
+      </div>
+      <div class="tools">
+        <h1>Projects</h1>
+        <div class="row">
+          <div class="smallCard">
+            <h1 id="react" class="textInCard">React</h1>
+            <p></p>
+          </div>
+          <div class="smallCard">
+            <h1 id="sql" class="textInCard">SQL</h1>
+          </div>
+          <div class="smallCard">
+            <h1 id="node" class="textInCard">node.js</h1>
+          </div>
+        </div>
       </div>
     </div>
   </body>
