--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A.s</title>
+    <title>Portfolio</title>
   </head>
   <body bgcolor="black">
     <div class="nav">
@@ -24,10 +24,13 @@
       <div id="myInfo">
         <div id="myImg" class="sub">
           <img width="400px" src="1.jpeg" alt="" />
+          <h3 id="nameUnderPic">Anand Sudeep</h3>
         </div>
         <div id="myData" class="sub">
           <p>
-            <span class="char">HI,</span><br /><span class="char">I'm Anand,</span><span class="char"><br />App developer</span>
+            <span class="char">HI,</span><br /><span class="char"
+              >I'm Anand,</span
+            ><span class="char"><br />App developer</span>
           </p>
         </div>
       </div>
